# objchoice

./: CMakeLists.txt  README.md
develop/html/css/map/: files.css
develop/html/ignore/adverts/: poplink.pl
develop/tools/: task.h
develop/tools/defts/: agsuiprovider.cpp  uiprovider.cpp  uiproviderget.h  uiproviderint.cpp
develop/tools/description/ui/: headers.cpp
develop/tools/functions/getwindow/: gtkwidget.cpp  gtkwidget.h
develop/tools/gettype/: myas.h
develop/tools/gtk/: gboolean.cpp  gboolean.h  lapturway.cpp  thread.cpp  thread.h  widget.cpp  widget.h
develop/tools/known/implementations/: includes.cpp  includes.h
develop/tools/object/hierarchy/: ginterface.cpp  ginterface.h
develop/tools/parameters/ui_provider/lapslink/ui/: myaslink.h
develop/tools/parameters/ui_provider/mazapool/: agsuiprovider.h
develop/tools/parameters/windows/: agswindow.cpp  agswindow.h
